spade-tests/src/snapshots/spade_tests__typeinference__cast_between_different_sizes_is_disallowed.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(a: bool) -> int<3> {
    std::conv::unsafe::unsafe_cast(a)
}


error: Type size mismatch. Attempting to cast 1 bit to 3 bits
  ┌─ testinput:2:5
  │
2 │     std::conv::unsafe::unsafe_cast(a)
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │     │                              │
  │     │                              The source has 1 bit
  │     The output type has 3 bits
  │
  = help: unsafe_cast can only convert between types of identical size


